# task-tracker

./: .gitignore  CMakeLists.txt  Task.cpp  Task.h  TaskList.cpp  TaskList.h  main.cpp  task-tracker.json
src/: CMakeLists.txt  Task.cpp  Task.h  TaskList.cpp  TaskList.h
tests/: CMakeLists.txt  test_JsonParsing.cpp  test_Task.cpp  test_TaskList.cpp
